package cn.wjb114514.proxy.DynamicProxy;

public interface ITeacherDao {
    void teach();
}
